# magnetron-effect-sim

./: .gitignore  Cargo.toml  NOTES.md  README.md  wrangler.toml
crates/core/: Cargo.toml
crates/core/data/convergence_reports/: m6_langmuir_blodgett.md  m7_axial_drift_convergence.md
crates/core/src/: config.rs  constants.rs  diagnostics.rs  lib.rs  particles.rs  poisson.rs  pusher.rs
crates/core/tests/: convergence.rs  diagnostics_test.rs  particle_convergence.rs  poisson_tests.rs
crates/reference-cli/: Cargo.toml
crates/reference-cli/src/: main.rs
crates/ui/: Cargo.toml  Dioxus.toml
crates/ui/assets/: main.css
crates/ui/src/: main.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
data/convergence_reports/: m1_pusher_order.md  m3_particle_count.md  m4_summary.md
data/runs/: idealized_m4.json
web/: index.html
