[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
magnetron-core = { path = "../core" }
dioxus = { version = "0.7", features = ["web"] }
dioxus-web = "0.7"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Performance"
] }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
